fixed h2 size, fixed button alignment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,7 +18,7 @@
     background-size: cover;
 }
 
-#mainHeader, h2
+#mainHeader,
 {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 14vw;
